# HapDuo

./: .gitignore  LICENSE  README.md  Snakefile  config.example.yaml  pyproject.toml
.github/workflows/: release.yml
archive/dpgb-dotplot/: README.md  Snakefile  example_config.yaml
hapduo/: SCRIPTS.md  __init__.py  batch_render_style4.py  find_inversions_strandswitch.py  plot_inversion_ideogram.py  plot_style4_hic.py  plot_synteny_ideogram.py
scripts/: README.md  _paf_chain.py  batch_render_style4.py  find_inversions_strandswitch.py  plot_style4_hic.py  plot_synteny_ideogram.py
