[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hapduo"
version         = "0.1.2"
description     = "Multi-evidence visualisation of structural variants between two haplotype assemblies of the same individual"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
authors         = [{ name = "Darrin Schultz", email = "darrin.schultz91@gmail.com" }]
keywords        = ["bioinformatics", "structural variation", "inversion",
                   "haplotype", "Hi-C", "PAF", "minimap2"]
classifiers     = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies    = [
    "numpy>=1.21",
    "matplotlib>=3.6",
    "pysam>=0.19",
]

[project.optional-dependencies]
# Hi-C panels in hapduo-style4 need hic-straw, which on Linux still has to
# compile from source against libcurl headers (no pre-built wheels on
# PyPI). Made optional so a plain `pip install hapduo` works without
# `apt install libcurl4-openssl-dev` first.
#   pip install hapduo[hic]      # enable Hi-C panels
hic = ["hic-straw>=1.3"]
dev = ["pytest", "ruff", "snakemake>=8"]

[project.urls]
Homepage    = "https://github.com/conchoecia/HapDuo"
Issues      = "https://github.com/conchoecia/HapDuo/issues"
Source      = "https://github.com/conchoecia/HapDuo"

[project.scripts]
hapduo-detect   = "hapduo.find_inversions_strandswitch:main"
hapduo-style4   = "hapduo.plot_style4_hic:main"
hapduo-ideogram = "hapduo.plot_inversion_ideogram:main"
hapduo-synteny  = "hapduo.plot_synteny_ideogram:main"
hapduo-batch    = "hapduo.batch_render_style4:main"

[tool.setuptools.packages.find]
include = ["hapduo*"]
